--- a/src/main/resources/webapp/style/style.css
+++ b/src/main/resources/webapp/style/style.css
@@ -9,6 +9,23 @@ input[type=number] {
 }
 
 
+#loading-overlay {
+    background-color: #333;
+    opacity: 0.8;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: 100;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    background-image: url('../images/loading.gif');
+    background-position: center;
+    background-repeat: no-repeat;
+    display: none;
+}
+
+
 .notify {
   display: block;
   background: #fff;
@@ -49,7 +66,7 @@ input[type=number] {
 
 .notify.info h2:before, .notify.info h2:after { background: #0080ff; }
 .notify.info h2, .info .alerticon { color: #0000a0; }
-.info .alerticon:before { content:"\f071"; }
+.info .alerticon:before { content:"\f058"; }
 
 .notify.success h2:before, .notify.success h2:after { background: #cad8a9; }
 .notify.success h2, .success .alerticon { color: #678361; }
